# ttf-edit-rs

./: Cargo.toml  LICENSE-MIT  README.md
crates/ttf-edit/: Cargo.toml
crates/ttf-edit/src/: bcow.rs  lib.rs
crates/ttf-edit/src/tables/: head.rs  hhea.rs  hmtx.rs  maxp.rs  mod.rs
crates/ttf-edit/src/tables/cmap/: codepoint.rs  format0.rs  glyph_id.rs  mod.rs
crates/ttf-edit/src/types/: f2dot14.rs  fixed.rs  fixed_point.rs  longdatetime.rs  mod.rs  tag.rs  uint24mod.rs  version16dot16.rs
